Updated sidenav for true links

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -60,6 +60,7 @@ img {
   color: #fff;
   cursor: pointer;
 }
+/*
 .gallery__item:hover .gallery__item__info,
 .gallery__item:focus .gallery__item__info {
   display: flex;
@@ -71,6 +72,7 @@ img {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
 }
+*/
 .gallery__item__info {
   display: none;
 }
