--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,25 +1,3 @@
-<!--
-<div class="container">
-  <div class="row">
-    <h2><%= @user.name %></h2>
-    <p><%= @user.email %></p>
-    <% if @user.id == @current_user.id %>
-      <%= link_to("編集", "/users/#{@user.id}/edit") %>
-    <% end %>
-  </div>
-
-  <% @user.posts.each do |post| %>
-    <div class="row">
-      <div class="card">
-        <div class="card-content">
-          <%= link_to(post.content, "/posts/#{post.id}") %>
-        </div>
-      </div>
-    </div>
-  <% end %>
-</div>
--->
-
 <!-- profile -->
 <div class="content">
   <div class="profile">
@@ -30,14 +8,17 @@
     <div class="profile__user__settings">
       <h1 class="profile__user__name"><%= @user.name %></h1>
       <% if @user.id == @current_user.id %>
-        <%= link_to("編集", "/users/#{@user.id}/edit", :class => "btn profile__edit__btn") %>
-        <!-- <button class="btn profile__edit__btn">編集</button> -->
+        <%= link_to("編集", "/users/#{@user.id}/edit", :class => "btn red profile__edit__btn") %>
       <% end %>
     </div>
 
     <div class="profile__stats">
       <ul>
-        <li><span class="profile__stat__count">164</span> posts</li>
+        <li>
+          <span class="profile__stat__count">
+            <%= @user.posts.count %>
+          </span> posts
+        </li>
       </ul>
     </div>
 
@@ -57,11 +38,7 @@
           <ul>
             <li class="gallery__item__likes">
               <span class="visually-hidden">Likes:</span>
-              <i class="fas fa-heart" aria-hidden="true"></i> 56
-            </li>
-            <li class="gallery-item-comments">
-              <span class="visually-hidden">Comments:</span>
-              <i class="fas fa-comment" aria-hidden="true"></i> 2
+              <i class="fas fa-heart" aria-hidden="true"></i> <%= @likes_count %>
             </li>
           </ul>
         </div>
