--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,11 +14,7 @@
           <ul>
             <li class="gallery__item__likes">
               <span class="visually-hidden">Likes:</span>
-              <i class="fas fa-heart" aria-hidden="true"></i> 56
-            </li>
-            <li class="gallery-item-comments">
-              <span class="visually-hidden">Comments:</span>
-              <i class="fas fa-comment" aria-hidden="true"></i> 2
+              <i class="fas fa-heart" aria-hidden="true"></i> <%= @likes_count %>
             </li>
           </ul>
         </div>
