Updated show margin

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,7 @@
             <%= image_tag @post.image.to_s, :width => "800", :height => "600", :class => "responsive-img z-depth-3" %>
           </div>
           <div class="col s12 l4">
-            <div class="card-panel">
+            <div class="card-panel" style="font-size:1.5rem;">
               <%= link_to(@user.name, "/users/#{@user.id}") %>
               <div class="card-content">
                 <p><%= simple_format(@post.content) %></p>
@@ -23,11 +23,11 @@
 
                 <% if Like.find_by(user_id: @current_user.id, post_id: @post.id) %>
                   <%= link_to("/likes/#{@post.id}/destroy", {method: "post"}) do %>
-                    <span class="fa fa-heart like-btn-unlike"></span>
+                    <span class="fa fa-heart like-btn-unlike" style="margin-left:4rem;"></span>
                   <% end %>
                 <% else %>
                   <%= link_to("/likes/#{@post.id}/create", {method: "post"}) do %>
-                    <span class="far fa-heart like-btn"></span>
+                    <span class="far fa-heart like-btn" style="margin-left:4rem;"></span>
                   <% end %>
                 <% end %>
                 <%= @likes_count %>
