--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,8 +1,13 @@
 .card-title::first-letter {
-  font-size: 2rem;
+  font-size: 3.4rem;
   font-weight: bold;
   color: #294C7A;
 }
+.card-content span.card-title {
+  font-size: 2.4rem;
+  font-weight: bold;
+}
 .card-content p {
-  margin-bottom: 10px !important;
+  margin-bottom: 17px !important;
+  font-size: 1.8rem;
 }
