--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -2,6 +2,27 @@
 <div class="container" style="margin-top:1.5rem;">
   <div class="row">
     <div class="col s12 m12 l12">
+    
+    <!--
+      <form class="loginBox">
+        <fieldset>
+          <legend class="legend">Login</legend>
+          <div class="input">
+            <input type="email" placeholder="Email">
+            <span><i class="fa fa-envelope-o"></i></span>
+          </div>
+
+          <div class="input">
+            <input type="password" placeholder="Password">
+            <span><i class="fa fa-lock"></i></span>
+          </div>
+          <button type="submit" class="submit">
+            <i class="fa fa-long-arrow-right"></i>
+          </button>
+        </fieldset>
+      </form>
+      -->
+
       <div class="card-panel">
         <h4>ログイン</h4>
 
