--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -2,29 +2,8 @@
 <div class="container" style="margin-top:1.5rem;">
   <div class="row">
     <div class="col s12 m12 l12">
-    
-    <!--
-      <form class="loginBox">
-        <fieldset>
-          <legend class="legend">Login</legend>
-          <div class="input">
-            <input type="email" placeholder="Email">
-            <span><i class="fa fa-envelope-o"></i></span>
-          </div>
-
-          <div class="input">
-            <input type="password" placeholder="Password">
-            <span><i class="fa fa-lock"></i></span>
-          </div>
-          <button type="submit" class="submit">
-            <i class="fa fa-long-arrow-right"></i>
-          </button>
-        </fieldset>
-      </form>
-      -->
-
-      <div class="card-panel">
-        <h4>ログイン</h4>
+      <div class="card-panel" style="padding: 0;">
+        <h4>Sign in</h4>
 
         <% if @error_message %>
           <div class="form__error">
@@ -47,7 +26,7 @@
           </div>
           <div class="row">
             <div class="input-field col s12">
-              <button type="submit" class="btn cyan waves-effect waves-light right">
+              <button type="submit" class="btn cyan waves-effect waves-light left">
                 submit
                 <i class="material-icons right">send</i>
               </button>
@@ -58,3 +37,18 @@
     </div>
   </div>
 </div>
+
+<style>
+.card-panel {
+  border-radius: 20px;
+}
+.card-panel h4 {
+  background: #F44336;
+  color: #fff;
+  padding: 20px;
+  border-radius: 9px;
+}
+.card-panel form {
+  padding: 25px;
+}
+</style>
