Changed icon for header nav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
           <% end %>
         <% else %>
           <%= link_to login_path do %>
-            <i class="material-icons right" style="margin-right:28px;">get_app</i>
+            <i class="material-icons right" style="margin-right:28px;">person_pin</i>
           <% end %>
         <% end %>
         <a href="#" data-target="slide-out" class="sidenav-trigger white-text">
